--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
         "axios": "^0.19",
+        "babel-eslint": "^10.1.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "eslint": "^7.9.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.20.6",
+        "husky": "^4.3.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
+        "lint-staged": "^10.3.0",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
+        "prettier": "^2.1.1",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "resolve-url-loader": "^3.1.0",
@@ -26,5 +34,16 @@
     },
     "dependencies": {
         "react-router-dom": "^5.2.0"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js,jsx}": [
+            "eslint --fix",
+            "git add"
+        ]
     }
 }
