--- a/.env.heroku
+++ b/.env.heroku
@@ -1,7 +1,7 @@
 APP_NAME=gmail-visualizer
 APP_ENV=heroku
 APP_KEY=base64:EBm6G0JWrhiFgu7A+9NcVikhmsJ5+ahdCYJ+j/6fbxg=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=https://gmail-visualizer.herokuapp.com/
 
 LOG_CHANNEL=stack
