--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "cross-env": "^7.0",
         "husky": "^4.3.0",
         "jquery": "^3.2",
+        "js-base64": "^3.5.2",
         "laravel-mix": "^5.0.5",
         "lint-staged": "^10.3.0",
         "lodash": "^4.17.19",
