--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.56",
         "axios": "^0.19",
+        "base64url": "^3.0.1",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "husky": "^4.3.0",
